k8s/development/flexion/unitconverter-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: unitconverter-ingress
  namespace: flexion
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  defaultBackend:
    service:
      name: unitconverter-service
      port:
        number: 8080
